manifests/gitlab/monolith/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: gitlab-server
  namespace: gitlab
spec:
  ingressClassName: nginx
  rules:
    - host: <domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-server
                port:
                  number: 80
#  tls:
#    - hosts:
#        - <domain>
#      secretName: wild-cert-secret
